Add working Timeline code, not connected yet
