# src/main/java/dk/kb/labsapi/api/impl/LabsapiApiServiceImpl.java
@@ -91,7 +91,7 @@ public class LabsapiApiServiceImpl implements LabsapiApi {
     /**
      * Extract statistics for the newspaper corpus at http://mediestream.dk/
      * 
-     * @param query: Optional query for the timeline statistics. If no query is given, all data are selected. The output will be a number of timeslices with the given granularity, followed by a summary.  The query can be tested at http://www2.statsbiblioteket.dk/mediestream/avis for a more interactive result. 
+     * @param query: Optional query for the timeline statistics. If no query is given, all data are selected. The output will be a number of timeslices with the given granularity, followed by a summary.  The query can be tested at http://www2.statsbiblioteket.dk/mediestream/avis for a more interactive result.  Note: Queries other than &#39;*:*&#39; will cause the numbers for pages and editions to be approximate. 
      * 
      * @param granularity: The granularity of the timeline. The finer the granularity, the longer the processing time.
      * 
@@ -99,7 +99,9 @@ public class LabsapiApiServiceImpl implements LabsapiApi {
      * 
      * @param endTime: The ending point of the timeline (inclusive), expressed as YYYY or YYYY-MM. If blank, the current point in time is used.  Note: As of 2021, Mediestream does nok contain newspapers from the last 8 years. 
      * 
-     * @param elements: The elements for the timeline. The element &#39;unique_publishers&#39; is special as it, as the name signals, the number of unique puslishers and not the sum of instances. 
+     * @param elements: The elements for the timeline. The element &#39;unique_titles&#39; is special as it, as the name signals, the number of unique titles and not the sum of instances. 
+     * 
+     * @param structure: The major parts of the delivery.  * comments: Metadata for the timeline (query, export time...), prefixed with # in CSV * header: The export field names. Only relevant for CSV as it is implicit in JSON * content: The export content itself 
      * 
      * @param format: The delivery format.  * CSV: Comma separated, missing values represented with nothing, strings encapsulated in quotes * JSON: Valid JSON in the form of a single array of TimelineEntrys 
      * 
@@ -113,7 +115,7 @@ public class LabsapiApiServiceImpl implements LabsapiApi {
       * @implNote return will always produce a HTTP 200 code. Throw ServiceException if you need to return other codes
      */
     @Override
-    public javax.ws.rs.core.StreamingOutput aviserStatsTimeline(String query, String granularity, String startTime, String endTime, List<String> elements, String format) throws ServiceException {
+    public javax.ws.rs.core.StreamingOutput aviserStatsTimeline(String query, String granularity, String startTime, String endTime, List<String> elements, List<String> structure, String format) throws ServiceException {
         // TODO: Implement...
     
         
@@ -246,7 +248,7 @@ public class LabsapiApiServiceImpl implements LabsapiApi {
     
         
         try{ 
-            String response = "dMPL5h";
+            String response = "yW23mqW";
         return response;
         } catch (Exception e){
             throw handleException(e);
